# C_data_structures

./: .gitignore  CMakeLists.txt
include/: binary_search_tree.h  queue.h  stack.h
source/: binary_search_tree.c  queue.c  stack.c
tests/: tests.c
